--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
           <h3>🏕️ Acampamento</h3>
           <ul>
             <li>Barraca (com toldo impermeável)</li>
-            <li>Colchonete ou inflável</li>
+            <li>Colchonete( pode ser normal ou inflável)  e rede</li>
             <li>Saco de dormir ou cobertor</li>
             <li>Lanterna ou headlamp</li>
             <li>Power bank extra</li>
@@ -753,3 +753,4 @@
 </script>
 </body>
 </html>
+
