--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
       <div class="pay-card">
         <svg class="svg" viewBox="0 0 24 24" fill="none"><rect x="2" y="5" width="20" height="14" rx="2" fill="#f97316"/></svg>
         <h5>Carnê</h5>
-        <p>Parcelamento estendido com desconto progressivo. Ideal para famílias.</p>
+        <p>Parcelamento estendido com desconto progressivo  de até 5x. Ideal para famílias.</p>
       </div>
       <div class="pay-card">
         <svg class="svg" viewBox="0 0 24 24" fill="none"><rect x="3" y="6" width="18" height="12" rx="2" fill="#f5c000"/></svg>
@@ -753,4 +753,5 @@
 </script>
 </body>
 </html>
+
 
