--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
       <div class="pay-card">
         <svg class="svg" viewBox="0 0 24 24" fill="none"><rect x="3" y="6" width="18" height="12" rx="2" fill="#f5c000"/></svg>
         <h5>Cartão</h5>
-        <p>Parcelamos em até 3x (dependendo da operadora). Prático e imediato.</p>
+        <p>Parcelamos em até quantas vezes você quiser(dependendo da operadora). Prático e imediato.</p>
       </div>
       <div class="pay-card">
         <svg class="svg" viewBox="0 0 24 24" fill="none"><circle cx="12" cy="12" r="10" fill="#25D366"/></svg>
@@ -585,13 +585,14 @@
         <div class="categoria-item">
           <h3>🏕️ Acampamento</h3>
           <ul>
-            <li>Barraca (com toldo impermeável)</li>
             <li>Colchonete( pode ser normal ou inflável)  e rede</li>
             <li>Saco de dormir ou cobertor</li>
-            <li>Lanterna ou headlamp</li>
+            <li>Travesseiro</li>
+            <li>Lanterna </li>
+            <li>Bíblia, Caderno e Caneta para anortações</li>
             <li>Power bank extra</li>
             <li>Cadeira de acampamento</li>
-            <li>Pratos/colheres reutilizáveis (ecologia)</li>
+            <li>Pratos/colheres e copos reutilizáveis</li>
           </ul>
         </div>
         
@@ -602,7 +603,7 @@
             <li>Agasalhos para noites frias</li>
             <li>Roupas de banho</li>
             <li>Toalhas de banho e rosto</li>
-            <li>Calçados fechados e tênis</li>
+            <li>Calçados adequados(chinelos para momentos de lazer)</li>
             <li>Chinelos para áreas comuns</li>
           </ul>
         </div>
@@ -610,7 +611,7 @@
         <div class="categoria-item">
           <h3>🧼 Higiene & Saúde</h3>
           <ul>
-            <li>Kit higiene pessoal completo</li>
+            <li>Kit higiene pessoal completo(escova de dente, sabonete, shampoo e condicionador, desodorante,...)</li>
             <li>Protetor solar FPS 30+</li>
             <li>Repelente de insetos</li>
             <li>Medicamentos de uso pessoal</li>
@@ -753,5 +754,6 @@
 </script>
 </body>
 </html>
+
 
 
