--- a/index.html
+++ b/index.html
@@ -593,6 +593,7 @@
             <li>Power bank extra</li>
             <li>Cadeira de acampamento</li>
             <li>Pratos/colheres e copos reutilizáveis</li>
+            <li>Garrafa da Água</li>
           </ul>
         </div>
         
@@ -754,6 +755,7 @@
 </script>
 </body>
 </html>
+
 
 
 
