--- a/index.html
+++ b/index.html
@@ -620,6 +620,17 @@
             <li>Lenços umedecidos e álcool gel</li>
           </ul>
         </div>
+        
+        <div class="categoria-item">
+          <h3>⚠️As informações importante</h3>
+          <ul>
+             <li> <strong>Cama e Banho: </strong>O acampamento não fornece roupa de cama e banho, sendo necessário levar sua própria toalha, lençol, travesseiro e cobertor, além de rede ou colchonete.</li>
+             <li><strong>Alimentação</strong>: As refeições são fornecidas, mas os participantes devem levar seus próprios pratos, copos e talheres. É permitido levar lanches extras.</li>
+             <li><strong>Vestuário:</strong> É proibido o uso de blusas decotadas, croppeds ou babydolls. Leggings devem ser usadas com uma camisa que cubra o quadril. Homens não podem tomar banho sem camisa.</li>
+          </ul>
+        </div>
+        
+      </div>
       </div>
     </div>
   </section>
@@ -755,6 +766,7 @@
 </script>
 </body>
 </html>
+
 
 
 
