--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
     <div class="hero-left">
       <div class="title">Acamp'26</div>
       <div class="subtitle">
-        Um fim de semana de natureza, atividades em família, oficinas e convivência — alimentação e infraestrutura inclusas.
+        Um fim de semana de natureza, atividades em família, oficinas e convivência, alimentação e infraestrutura inclusas.
         Traga sua família e amigos para viverem uma experiência ao ar livre inesquecível!
       </div>
 
@@ -766,6 +766,7 @@
 </script>
 </body>
 </html>
+
 
 
 
