--- a/index.html
+++ b/index.html
@@ -586,12 +586,11 @@
           <h3>🏕️ Acampamento</h3>
           <ul>
             <li>Colchonete( pode ser normal ou inflável)  e rede</li>
-            <li>Saco de dormir ou cobertor</li>
+            <li>Corda para rede</li>
             <li>Travesseiro</li>
             <li>Lanterna </li>
             <li>Bíblia, Caderno e Caneta para anortações</li>
             <li>Power bank extra</li>
-            <li>Cadeira de acampamento</li>
             <li>Pratos/colheres e copos reutilizáveis</li>
             <li>Garrafa da Água</li>
           </ul>
@@ -766,6 +765,7 @@
 </script>
 </body>
 </html>
+
 
 
 
