--- a/index.html
+++ b/index.html
@@ -369,8 +369,8 @@
     <div class="hero-left">
       <div class="title">Acamp'26</div>
       <div class="subtitle">
-        Um fim de semana de natureza, atividades em família, oficinas e convivência, alimentação e infraestrutura inclusas.
-        Traga sua família e amigos para viverem uma experiência ao ar livre inesquecível!
+        Um fim de semana de natureza, atividades em família, ministrações, louvores e dinâmicas, alimentação e infraestrutura inclusas.
+        Traga sua família e amigos para viverem uma experiência inesquecível!
       </div>
 
       <a class="cta" href="https://forms.office.com/r/0X77nL6GHk" target="_blank" id="ctaBtn" aria-label="Quero participar">
@@ -653,8 +653,11 @@
 </footer>
 
 <!-- WhatsApp floating -->
+<!-- WhatsApp floating -->
 <a href="https://wa.me/559870109772" class="wa" target="_blank" aria-label="Abrir WhatsApp">
-  <svg width="26" height="26" viewBox="0 0 24 24" fill="none"><path d="M20.5 3.5L3.5 20.5V24l3.5-1 13-13c.8-.8.8-2 0-2.5z" fill="white"/></svg>
+  <svg width="26" height="26" viewBox="0 0 24 24" fill="none">
+    <path fill="white" d="M12.004 0C5.372 0 0 5.373 0 12c0 2.118.554 4.101 1.518 5.823L0 24l6.36-1.654A11.96 11.96 0 0012.004 24C18.637 24 24 18.627 24 12S18.637 0 12.004 0zm6.285 17.9c-.264.74-1.537 1.383-2.113 1.468-.563.082-1.217.117-4.155-1.091-3.92-1.417-6.453-5.03-6.642-5.241-.187-.212-1.52-1.875-1.52-3.57 0-1.695.894-2.528 1.213-2.879.316-.35.69-.442.922-.442.23 0 .46 0 .662.01.213.01.501-.08.784.59.264.63.888 2.165.967 2.32.08.154.133.338.013.544-.12.205-.182.33-.362.518-.183.187-.387.41-.554.55-.183.154-.37.325-.158.642.213.318.945 1.565 2.028 2.533 1.398 1.22 2.57 1.578 2.889 1.758.318.182.5.153.684-.092.182-.244.786-.91.996-1.224.213-.314.425-.266.714-.158.288.107 1.815.855 2.132 1.01.317.154.53.23.608.358.08.126.08.728-.185 1.468z"/>
+  </svg>
 </a>
 
 <!-- Minimal JS for tabs, parallax, countdown, menu toggle -->
@@ -765,6 +768,7 @@
 </script>
 </body>
 </html>
+
 
 
 
